[fix] mockService stock 공통화